# AI-TRADING-SIGNALS

./: .gitignore  Dockerfile  Institutional-Level-Components.py  README.md  adcanced_risk_managment.py  docker-compose.yml  env.template  folder-structure.txt  main.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  system_architecture-overview.txt  trading.py  trading_assistant.py
app/: __init__.py  __main__.py  config.py  schemas.py  server.py
app/data_sources/: __init__.py  base.py  binance_source.py  factory.py  yfinance_source.py
app/discord_client/: __init__.py  client.py  formatter.py
app/indicators/: __init__.py  calculator.py
app/scheduler/: __init__.py  signal_scheduler.py
app/signal_engine/: __init__.py  gemini_engine.py  prompt_builder.py
config/: config.yaml
delivery/: bot_delivery.py
indicators/: indicator_engine.py
risk/: risk_manager.py
sentiment/: sentiment_analyzer.py
signals/: signal_engine.py
tests/: __init__.py  conftest.py  test_discord_client.py  test_indicators.py  test_integration.py  test_schemas.py  test_signal_engine.py
utils/: config.py
